2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ci, rcs: Make MSG in ‘-m...MSG’ optional.

	* rcsutil.c (set_empty_log_message): New func.
	* base.h (set_empty_log_message): New func decl.
	* ci.c (getlogmsg, main): Use ‘set_empty_log_message’.
	* rcs.c (getmessage): Likewise.

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Output leading '@' for "rcs -m" log in RCS file.

	Omission from 2010-05-24, "Rewrite parsing".
	* rcs.c (scanlogtext): When replacing
	log text from "rcs -m", output leading '@'.

2010-11-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘oom’ more.

	* b-divvy.c (oom): Make func not static.
	* b-divvy.h (oom): New func decl.
	* rcsedit.c (okalloc): Use ‘oom’.

2010-11-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix typo: Mention rcsdiff ‘-B’ once only.

	* rcsdiff.c: Mention ‘-B’ once only in help text.
	Reported by Keith Thompson.

2010-11-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.94

2010-11-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Include extra \n in RCS file to fully emulate RCS 5.7.

	* rcsgen.c (putadmin): Output trailing newline.

2010-11-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revert symbolic names ordering to be compatible with RCS 5.7.

	Translation oversight from 2010-04-28, "Replace
	‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’".
	* rcsedit.c (addsymbol): For new symbolic
	names, add to front of list instead of end.

2010-11-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Maintain ‘GROK (deltas)’ in proper order.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): Reorder ‘repo->deltas’
	to reflect edits order, not index order.

2010-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Reuse backing store in ‘swapeditfiles’.

	* rcsedit.c (swapeditfiles): Allocate and
	do basic initialization for ‘es->fedit’ once only.

2010-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For stdio operation, prep ‘finishedit’ properly.
